feat：axios请求封装暂时先这样了

--- a/src/style/element-ui.scss
+++ b/src/style/element-ui.scss
@@ -1,3 +1,5 @@
-// 对于在app同级下面的elementUI的样式修改而特地创建的文件
-// 每种修改后必须解释一下，是对于什么的修改
-// 每种修改应加上特定的props-class的名称，避免修改了其他的样式
+/**
+* 为了修改elementUI原有样式而特地创建的文件
+* 每种修改后必须解释一下，是对于什么的修改
+* 每种修改应加上特定的props-class的名称，避免修改了其他的样式，也利于样式复用
+*/
